# Aivokat

./: .gitignore  Initial Commit  README.md
demo UI UX/: index.html  package.json  vite.config.ts
demo UI UX/src/: main.tsx  styles.css
lou/: .env.example  .gitignore  API_DOCUMENTATION.md  API_EXAMPLES.md  README.md  index.html  package-lock.json  package.json  start_backend.sh  start_frontend.sh
lou/backend/: main.py  pyproject.toml
lou/backend/api/routes/: analysis.py  api_console.py  chat.py  commits.py  contracts.py  export.py  graph.py  mega_brain.py  playbook.py  playbooks.py  review.py  rewrite.py
lou/backend/core/: config.py  database.py  schema.py
lou/backend/data/: lou.db
lou/backend/models/: evaluation_report.json
lou/backend/models/clause-classifier/: labels.json  metrics.json  model.joblib
lou/backend/models/lou-retriever/: README.md  config_sentence_transformers.json
lou/backend/services/: business_humanizer.py  clause_classifier.py  document_segmentation.py  embedder.py  evolution.py  exporter.py  llm.py  parser.py  playbook_analysis.py  playbook_matching.py  rag.py  vector_store.py
lou/frontend/: index.html  package-lock.json  package.json
lou/frontend/src/: App.jsx  App.tsx
lou/scripts/: build-api-pdf.py  build_training_dataset.py  evaluate_models.py  ingest_playbook.py  reindex_chroma.py  seed_demo.py  seed_diverse_playbooks.py  train_clause_classifier.py  train_retriever.py
lou/src/: main.tsx  playbookData.ts  styles.css
lou/src/api/: client.ts  mockData.ts
lou/src/components/: BrainLoader.tsx  ChatScreen.tsx  Nav.tsx  (+4 more)
(+20 files in other folders)
